Fixing margin on mobile

--- a/site/resources/css/project.less
+++ b/site/resources/css/project.less
@@ -384,6 +384,7 @@
         #screenshots {
             img, video, audio {
                 width: 100%;
+                margin-right: 0;
             }
         }
     }
